# rinha-backend-2025

./: Dockerfile  docker-compose.yml  pyproject.toml
app/: Dockerfile  main.py
app/core/: config.py  database.py
app/models/: payment.py
app/routes/: __init__.py  middleware.py  payments.py
app/services/: __init__.py  health.py  payment.py
app/services/core/: circuit.py  queue.py
processors/: Dockerfile  index.js  package.json
